Working in core in some cases. Problem with connectivity.